<resources>

    <string name="app_name">HackerScape</string>
    <string name="decifrar">Decifra</string>
    <string name="protege"> protege</string>
    <string name="escapa">y escapa</string>
    <string name="texto1">¿Tienes lo necesario para vencer al sistema?</string>
    <string name="Acceder">Acceder</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="iniciarsesion">INICIAR SESIÓN</string>
    <string name="texto2">Inicie sesión para continuar con nuestra aplicación</string>
    <string name="olvcontra">¿Olvidaste la contraseña?</string>
    <string name="nocuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="btn_registrate">Registrarse</string>
    <string name="Atras">Atras</string>
    <string name="texto3">Por favor complete los datos y cree una cuenta</string>
    <string name="aviso">La contraseña debe tener 8 caracteres</string>
    <string name="yacuenta">¿Ya tienes cuenta?</string>
    <string name="iniciaS">inicia sesión</string>
    <string name="alerta">ALERTA</string>
    <string name="texto4">Tu identidad ha sido comprometida. Un grupo de hackers ha tomado control de tus datos.</string>
    <string name="tu_mision">Tu misión :</string>
    <string name="texto5">Recupera el control superando desafíos digitales.</string>
    <string name="comenzar">Comenzar misión</string>
    <string name="cronometro">2:00</string>
    <string name="nivel1">NIVEL 1</string>
    <string name="contraseña_segura">CONTRASEÑA SEGURA</string>
    <string name="txt_contraseña">Crear una contraseña segura para pasar al siguiente nivel</string>
    <string name="contraseña_nivel">Contraseña...</string>
    <string name="validando_seguridad">Validando seguridad...</string>
    <string name="mayuscula">Mayúscula</string>
    <string name="minuscula">Minúscula</string>
    <string name="numero">Número</string>
    <string name="simbolo">Símbolo</string>
    <string name="minimo_caracteres">Mínimo 8 caracteres</string>
    <string name="nivel2">NIVEL 2</string>
    <string name="detectar">🔎 DETECTAR LAS SEÑALES DE PHISHING</string>
    <string name="txt_objetivo">Toca las partes sospechosas del siguiente correo electrónico</string>
    <string name="felicitar">Felicidades agente cibernético</string>
    <string name="txt_superado">Has superado este reto y has demostrado tus habilidades para identificar amenazas digitales</string>
    <string name="btn_reintentar">Reintentar reto</string>
    <string name="ejemplo_correo">Ejemplo@gmail.com</string>
    <string name="ejemplo_contraseña">********</string>
    <string name="ejemplo_contraseña2">contraseña</string>
    <string name="nueva_contraseña">Nueva contraseña</string>
    <string name="mision_fallida">MISIÓN FALLIDA</string>
    <string name="msg_alerta">Tiempo expirado. El sistema de seguridad detectó tus actividades y finalizó tu conexión. Inténtalo de nuevo para completar la misión.</string>
    <string name="btn_intenatalo_nuevo">Inténtalo de nuevo</string>
    <string name="btn_inicio">Inicio</string>
    <string name="msg_mision">MISIÓN COMPLEATADA</string>
    <string name="msg_nivel1">Nivel 1 completado</string>
    <string name="msg_diagnostico">Estado del sistema: Ejecutando diagnósticos...</string>
    <string name="btn_valido"> ✔ Sistema validado exitosamente </string>
    <string name="msg_nivel2">Nivel 2 completado</string>
    <string name="logout">Cerrar Sesión</string>


</resources>