<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="320dp"
    android:background="@drawable/border_mision"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/icono_alerta2"
    android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mision_fallida"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_mono_medium"
        android:layout_gravity="center"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/arapey"
        android:text="@string/msg_alerta"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_retry"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_reintentar"
            android:fontFamily="@font/roboto_mono_medium"
            android:paddingStart="30dp"
            android:paddingTop="8dp"
            android:paddingEnd="30dp"
            android:paddingBottom="8dp"
            android:text="@string/btn_intenatalo_nuevo"
            android:textAllCaps="false"
            android:textColor="#00FF00"
            android:textSize="11sp" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/verde"
            android:fontFamily="@font/roboto_mono_medium"
            android:padding="16dp"
            android:text="@string/btn_inicio"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.74" />
    </LinearLayout>
</LinearLayout>
