<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="250dp"
    android:padding="20dp"
    android:background="@drawable/border_mision_completa">

    <!-- Icono -->
    <ImageView
        android:id="@+id/iconMission"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/icono_cpu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/verde_claro" />

    <!-- Título -->
    <TextView
        android:id="@+id/titleMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_mision"
        android:textSize="20sp"
        android:textColor="@color/verde_claro"
        android:fontFamily="@font/roboto_mono_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iconMission"
        app:layout_constraintTop_toTopOf="@id/iconMission"
        android:layout_marginStart="12dp" />

    <!-- Texto de objetivo -->

    <!-- Barra de progreso -->
    <TextView
        android:id="@+id/objectiveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/arapey"
        android:text="@string/msg_nivel1"
        android:textColor="@color/verde_claro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleMission" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:progress="70"
        android:max="100"
        android:progressDrawable="@drawable/progeso_barra"
        app:layout_constraintTop_toBottomOf="@id/objectiveText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <!-- Estado del sistema -->
    <TextView
        android:id="@+id/statusText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_diagnostico"
        android:textSize="18sp"
        android:textColor="#CCCCCC"
        android:fontFamily="@font/arapey"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <!-- Botón de completar -->
    <Button
        android:id="@+id/buttonComplete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_valido"
        android:backgroundTint="#003300"
        android:textColor="@color/verde_claro"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/statusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
