<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    tools:context=".alertaactivity">

    <Button
        android:id="@+id/loginButton2"
        android:layout_width="241dp"
        android:layout_height="113dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#00FF00"
        android:fontFamily="@font/arapey"
        android:padding="12dp"
        android:text="@string/comenzar"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <TextView
        android:id="@+id/titleText2"
        android:layout_width="158dp"
        android:layout_height="114dp"
        android:fontFamily="@font/anton"
        android:text="@string/alerta"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="314dp"
        android:layout_height="226dp"
        android:fontFamily="@font/arapey"
        android:text="@string/texto4"
        android:textColor="@color/verde"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="110dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/icono_alerta" />

    <TextView
        android:id="@+id/subtitleText3"
        android:layout_width="330dp"
        android:layout_height="126dp"
        android:fontFamily="@font/arapey"
        android:text="@string/texto5"
        android:textAlignment="center"
        android:textColor="@color/verde"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />
</androidx.constraintlayout.widget.ConstraintLayout>