<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:id="@+id/main">

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/cronometro"
        android:textColor="@color/verde"
        android:gravity="center"
        android:textSize="26sp"
        android:padding="10dp"
        android:fontFamily="@font/arapey"
        android:background="@drawable/timer_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/securityImage"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/img_nivel2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/nivel2"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/passwordPrompt"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/detectar"
        android:textAlignment="center"
        android:textColor="@color/verde"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelTextView" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arapey"
        android:gravity="center"
        android:text="@string/txt_objetivo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="398dp"
        android:layout_height="259dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985"
        app:srcCompat="@drawable/img_phishing" />

</androidx.constraintlayout.widget.ConstraintLayout>
